# gnome-software

./: .gitignore  meson.build  meson_options.txt
debian/: changelog  control  control.in  copyright  gbp.conf  gnome-software-common.install  gnome-software-plugin-flatpak.install  gnome-software-plugin-limba.install  gnome-software-plugin-snap.install  gnome-software-plugin-vanilla.install  gnome-software.gsettings-override.in  gnome-software.install  rules
debian/extra/: 60gnome-software
debian/patches/: 0001-build-Use-the-configured-directory-locations-to-inst.patch  0001-details-page-Add-support-for-verified-developers.patch  0001-fwupd-Do-not-use-deprecated-API.patch  series  (+25 more)
plugins/: meson.build
plugins/vanilla-meta/: gs-plugin-vanilla-meta.c  gs-plugin-vanilla-meta.h  gs-vanilla-meta-util.c  gs-vanilla-meta-util.h  meson.build
plugins/vso/: gs-plugin-vso.c  gs-plugin-vso.h  meson.build
po/: LINGUAS  POTFILES.in  ab.po  af.po  am.po  an.po  ar.po  ar_MA.po  arn.po  as.po  ast.po  az.po  be.po  bg.po  bn.po  bo.po  br.po  bs.po  ca.po  ca@valencia.po  ce.po  ckb.po  co.po  crh.po  cs.po  csb.po  cv.po  cy.po  da.po  de.po  dv.po  el.po  en_AU.po  en_CA.po  en_GB.po  eo.po  es.po  et.po  eu.po  fa.po  (+102 more)
src/: gnome-software.gresource.xml  gs-prefs-dialog.c  gs-prefs-dialog.h  gs-prefs-dialog.ui  gs-tariff-editor.c  gs-tariff-editor.h  gs-tariff-editor.ui  meson.build
subprojects/gnome-pwa-list/: README.md  gnome-pwa-list-foss.csv  gnome-pwa-list-foss.xml  gnome-pwa-list-proprietary.csv  gnome-pwa-list-proprietary.xml  meson.build  pwa-metainfo-generator.py
(+4 files in other folders)
