project('gnome-pwa-list')

python3 = find_program('python3')

gnome_pwa_list_foss = configure_file(
  input: 'gnome-pwa-list-foss.xml',
  output: 'gnome-pwa-list-foss.xml',
  copy: true,
)
gnome_pwa_list_proprietary = configure_file(
  input: 'gnome-pwa-list-proprietary.xml',
  output: 'gnome-pwa-list-proprietary.xml',
  copy: true,
)
